--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "extends": ["@rocketseat/eslint-config/node"],
-  "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
-  }
+  "extends": "@rocketseat/eslint-config/node"
 }
